--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function generate(){
         box.appendChild(qrDiv);
 
         // Hier erstellen wir QR-Code als Link auf check.html
-        const url = `${window.location.origin}/check.html?code=${id}`;
+       const url = "https://noalorie123.github.io/Pit-Security-System/check.html?code=" + id;
         new QRCode(qrDiv,{text:url,width:200,height:200,colorDark:"#ffffff",colorLight:"#000000"});
 
         const typeText=document.createElement("p");
