--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ function generate(){
         box.appendChild(qrDiv);
 
         // Hier erstellen wir QR-Code als Link auf check.html
-       const url = "https://noalorie123.github.io/Pit-Security-System/check.html?code=" + id;
+      const base = "https://DEINNAME.github.io/REPO-NAME/check.html";
+const finalURL = base + "?code=" + Date.now();
         new QRCode(qrDiv,{text:url,width:200,height:200,colorDark:"#ffffff",colorLight:"#000000"});
 
         const typeText=document.createElement("p");
