--- a/check.html
+++ b/check.html
@@ -1,32 +1,60 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>PIT SECURITY</title>
+<title>Pit Security – Check</title>
+
 <style>
-body{background:#111;color:white;font-family:sans-serif;text-align:center;}
-textarea{width:90%;height:200px;margin-top:20px;font-size:16px;}
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #05010a, #1b0033);
+  color: white;
+  padding: 30px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2.5em;
+  background: linear-gradient(90deg, #ff00cc, #00ccff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+textarea {
+  margin-top: 20px;
+  width: 100%;
+  height: 250px;
+  font-size: 18px;
+  border-radius: 15px;
+  border: none;
+  padding: 15px;
+  outline: none;
+}
 </style>
 </head>
+
 <body>
 
-<h1>PIT SECURITY</h1>
-<p>Schreib hier rein – bleibt auf deinem Handy gespeichert</p>
+<h1>Pit Security System</h1>
+<p>Schreib hier rein – der Text bleibt auf DEINEM Handy gespeichert.</p>
 
-<textarea id="box" placeholder="Dein Text..."></textarea>
+<textarea id="note" placeholder="Name, bezahlt, Info ..."></textarea>
 
 <script>
 const params = new URLSearchParams(window.location.search);
-const code = params.get("code");
+const id = params.get("id");
 
-const box = document.getElementById("box");
+const key = "pit_security_" + id;
+const textarea = document.getElementById("note");
 
-if(code){
-  box.value = localStorage.getItem(code) || "";
-  box.oninput = () => localStorage.setItem(code, box.value);
-}else{
-  box.value = "QR-Code ungültig";
-}
+textarea.value = localStorage.getItem(key) || "";
+
+textarea.addEventListener("input", () => {
+  localStorage.setItem(key, textarea.value);
+});
 </script>
 
 </body>
