--- a/check.html
+++ b/check.html
@@ -1,64 +1,60 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Pit Security – Check</title>
+<title>Pit Security Check</title>
 
 <style>
 body {
   margin: 0;
-  min-height: 100vh;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #05010a, #1b0033);
-  color: white;
   padding: 30px;
+  font-family: Arial;
+  background: linear-gradient(135deg, #0a001a, #1a0033);
+  color: white;
 }
 
-h1 {
+h2 {
   text-align: center;
-  font-size: 2.5em;
   background: linear-gradient(90deg, #ff00cc, #00ccff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 textarea {
-  margin-top: 20px;
   width: 100%;
   height: 250px;
+  margin-top: 20px;
   font-size: 18px;
   border-radius: 15px;
-  border: none;
   padding: 15px;
-  outline: none;
+  border: none;
 }
 </style>
 </head>
 
 <body>
 
-<h1>Pit Security System</h1>
-<p>Schreib hier rein – der Text bleibt auf DEINEM Handy gespeichert.</p>
+<h2>Pit Security System</h2>
+<p>Text bleibt auf DEINEM Handy gespeichert.</p>
 
-<textarea id="note" placeholder="Name, bezahlt, Info ..."></textarea>
+<textarea id="t" placeholder="Name, bezahlt, Notizen ..."></textarea>
 
 <script>
-const params = new URLSearchParams(window.location.search);
-const id = params.get("id");
+const id = new URLSearchParams(window.location.search).get("id");
+const key = "pit_" + id;
+const t = document.getElementById("t");
 
-const key = "pit_security_" + id;
-const textarea = document.getElementById("note");
+t.value = localStorage.getItem(key) || "";
 
-textarea.value = localStorage.getItem(key) || "";
-
-textarea.addEventListener("input", () => {
-  localStorage.setItem(key, textarea.value);
-});
+t.oninput = () => {
+  localStorage.setItem(key, t.value);
+};
 </script>
 
 </body>
 </html>
+
+
 
 
 
