--- a/check.html
+++ b/check.html
@@ -6,15 +6,79 @@ import { getAnalytics } from "firebase/analytics";
 
 // Your web app's Firebase configuration
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>Pit Security System</title>
+<style>
+body {margin:0; padding:30px; font-family:Arial; background: linear-gradient(135deg,#0a001a,#1a0033); color:white;}
+h2 {text-align:center; font-size:2.5em; background: linear-gradient(90deg,#ff00cc,#00ccff); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
+textarea {width:100%; height:180px; margin-top:20px; font-size:18px; border-radius:15px; padding:15px; border:none; outline:none;}
+label {display:block; margin-top:20px; font-size:20px;}
+input[type=checkbox]{transform:scale(1.5); margin-right:10px;}
+</style>
+
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+</head>
+
+<body>
+
+<h2>Pit Security System</h2>
+<p>Text & „Bezahlt“-Status bleiben für alle Geräte gespeichert.</p>
+
+<textarea id="note" placeholder="Name, Infos ..."></textarea>
+<label><input type="checkbox" id="paid"> Bezahlt</label>
+
+<script>
+// 🔹 1️⃣ Firebase Config - ERSETZE mit DEINEN Daten
 const firebaseConfig = {
-  apiKey: "AIzaSyBFTczr29TCsM7lzC3j9U55o4JgSUuuYsE",
-  authDomain: "pit-security-system.firebaseapp.com",
-  databaseURL: "https://pit-security-system-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "pit-security-system",
-  storageBucket: "pit-security-system.firebasestorage.app",
-  messagingSenderId: "1092088178109",
-  appId: "1:1092088178109:web:0fd41710b9f189e5ee9ed4",
-  measurementId: "G-1V71RENC2G"
+  apiKey: "DEIN_API_KEY",
+  authDomain: "DEIN_PROJECT_ID.firebaseapp.com",
+  databaseURL: "https://DEIN_PROJECT_ID-default-rtdb.firebaseio.com",
+  projectId: "DEIN_PROJECT_ID",
+  storageBucket: "DEIN_PROJECT_ID.appspot.com",
+  messagingSenderId: "1234567890",
+  appId: "1:1234567890:web:abcdefgh"
+};
+
+// 🔹 2️⃣ Firebase Init
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+
+// 🔹 3️⃣ QR-ID aus URL
+const params = new URLSearchParams(window.location.search);
+const id = params.get("id") || "default";
+
+// 🔹 4️⃣ Referenz in Firebase
+const ref = db.ref("qrcodes/" + id);
+
+// 🔹 5️⃣ Elemente
+const textarea = document.getElementById("note");
+const checkbox = document.getElementById("paid");
+
+// 🔹 6️⃣ Lade vorhandene Daten
+ref.get().then(snapshot=>{
+  if(snapshot.exists()){
+    const data = snapshot.val();
+    textarea.value = data.text || "";
+    checkbox.checked = data.paid || false;
+  }
+});
+
+// 🔹 7️⃣ Änderungen speichern
+textarea.addEventListener("input", ()=>{
+  ref.update({text:textarea.value, paid:checkbox.checked});
+});
+checkbox.addEventListener("change", ()=>{
+  ref.update({text:textarea.value, paid:checkbox.checked});
+});
+</script>
+
+</body>
+</html>
 };
 
 // Initialize Firebase
