--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function generateQRs() {
   const container = document.getElementById("qrs");
   container.innerHTML = "";
 
-  const base = window.location.origin + window.location.pathname.replace("index.html","") + "check.html";
+const base = "https://noalorie123.github.io/Pit-Security-System/check.html";
   const labels = [
     {name:"1 Person", id:"person"},
     {name:"CREW", id:"crew"},
